--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1144,7 +1144,7 @@ thereby introducing the relaxation time $\tau_i$:
 \begin{equation}
 -\int_{\Omega(t)} 2 \eta \varepsilon(\mathbf{u}) : \varepsilon(\mathbf{u})  + \tau_i \int_{\Gamma_F(t)} \rho_0 g (\mathbf{u} \cdot \mathbf{n})^2 = 0.
 \end{equation}
-This equation may be solved for $i\tau_i$:
+This equation may be solved for $\tau_i$:
 \begin{equation}
 \tau_i = \frac{\int_{\Omega(t)} 2 \eta \varepsilon(\mathbf{u}) : \varepsilon(\mathbf{u})}{ \int_{\Gamma_F(t)} \rho_0 g (\mathbf{u} \cdot \mathbf{n})^2}.
 \end{equation}
