--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1079,8 +1079,7 @@ enough that the $\tau^*$ would need to be updated frequently (if ever).
 
 We also investigate the advantages of combining adaptive mesh refinement with free surface computations.
 \citet{crameri2012comparison} performed a community benchmark of a setup for which there is no analytic
-solution. In this benchmark, a buoyant blob rises beneath a viscous lid with a free surface, deflecting the
-boundary upwards, reminiscent of the dynamic topography due to a rising plume (for the full setup, see \citet{crameri2012comparison}). 
+solution. In this benchmark, a buoyant blob rises beneath a viscous lid with a free surface, deflecting the boundary upwards.
 Figure~\ref{fig:amr} shows the convergence of the maximum topography at 3 Myr to its value in a high resolution simulation,
 both with and without adaptive mesh refinement.
 
